@@ -28,6 +28,7 @@
 //[-------------------------------------------------------]
 //[ Includes                                              ]
 //[-------------------------------------------------------]
+#include <vector>
 #include "PL3dsMaxSceneExport/PLSceneNode.h"
 
 
