@@ -27,7 +27,6 @@
 #include <PLCore/File/File.h>
 #include <PLCore/File/Directory.h>
 #include <IGame/IGame.h>
-#include "PL3dsMaxSceneExport/PLSceneExportOptions.h"
 #include "PL3dsMaxSceneExport/PLSceneExportDialogs.h"
 #include "PL3dsMaxSceneExport/PLLog.h"
 #include "PL3dsMaxSceneExport/PLTools.h"
@@ -131,6 +130,14 @@ PLSceneEnumProc::PLSceneEnumProc(const char szName[], Interface &cMaxInterface, 
 					sFilename.append("\\");
 					CreateDirectory(sFilename.c_str(), nullptr);
 				}
+			}
+			// Misc
+			sFilename = sDataFilename + "\\Misc\\";
+			CreateDirectory(sFilename.c_str(), nullptr);
+			if (g_SEOptions.bSubdirectories) {
+				sFilename.append(g_SEOptions.sFilenameOnly);
+				sFilename.append("\\");
+				CreateDirectory(sFilename.c_str(), nullptr);
 			}
 			// Scenes
 			sFilename = sDataFilename + "\\Scenes\\";
